--- a/2nd year 1st semester.html
+++ b/2nd year 1st semester.html
@@ -66,12 +66,15 @@
                 text-decoration: none;
                 color: rgb(209, 245, 110);
             }
+            img{
+                width: 100%;
+            }
         </style>
     </head>
     <body>
         <br><br><br><br>
         <div class="top"> 
-             <a href="home.html" class="link">Home</a>
+             <a href="index.html" class="link">Home</a>
              <a href="portifolio.html" class="link">About</a>
              <a href="content.html" class="link">Content</a>
         </div>
@@ -124,6 +127,9 @@ us what it means to create and understand space.
                 <li><a href="2nd year 2nd semester.html">
                     Internship</a></li>
             </ul>
+        </div>
+        <div>
+            <img src="cover.png">
         </div>
     </body>
 </html>
